-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.2
-
Symbian^3/Nokia N8
-
60475e93890550f4fb67367980249a21b9346747
If Qt application is launched directly to background, it consumes about 3MB of graphics memory. The memory is probably consumed by the graphics surface. This should not happen, because Symbian applications in general are not allowed to consume any graphics memory while staying in the background.
Comment from Jason Barron: "Qt will currently only free graphics memory when it receives EEventWindowVisibilityChanged and the value is ENotVisible. If the apps starts up in the background, then this event probably does not get sent.
Qt will allocate graphics memory when it paints the first frame. When a Qt app is started, the entire window is marked as dirty in the backing store and this will generate an UpdateRequest event which will trigger the painting (and therefore allocation). Assuming we can detect when an application is started in the background, we should be able to fix this."