src/gui/kernel/qwidget.cpp
@@ -234,7 +234,8 @@ void QWidgetBackingStoreTracker::registerWidget(QWidget *w)
  */
 void QWidgetBackingStoreTracker::unregisterWidget(QWidget *w)
 {
-    if (m_widgets.remove(w) && m_widgets.isEmpty()) {
+    m_widgets.remove(w);
+    if (m_widgets.isEmpty()) {
         delete m_ptr;
         m_ptr = 0;
     }
